maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:15: error: ';' expected but 'else' found.
      else {
      ^